--- a/PartageRecette/asset/css/style.css
+++ b/PartageRecette/asset/css/style.css
@@ -1,10 +1,29 @@
-.img_cat{
+/*.img_cat{
 	float: left;
-
     padding-top: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
     padding-left: 5px;
+}*/
 
+header{
+	text-align: center;
 }
 
+nav, ul{
+	list-style: none;
+}
+
+nav, ul, li{
+	margin: 0%;
+	display: inline-block;
+	padding-right: 10px;
+}
+
+a{
+	color:green;
+}
+
+.diviseur{
+	border:1px;
+}
